translate, scale, rotate, shear, projection, view matrices

--- a/src/pglm/CMakeLists.txt
+++ b/src/pglm/CMakeLists.txt
@@ -1,4 +1,3 @@
 
-file(GLOB_RECURSE FILES *.c *.h)
-add_library(pglm ${FILES})
-target_include_directories(pglm PUBLIC .)
+add_library(pglm INTERFACE)
+target_include_directories(pglm INTERFACE .)
