--- a/src/camera/CMakeLists.txt
+++ b/src/camera/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(camera ${FILES})
 
 target_link_libraries(camera PUBLIC 
     pglm
+    lcd
 )
 
 target_include_directories(camera PUBLIC .)
