--- a/src/rasterizer/CMakeLists.txt
+++ b/src/rasterizer/CMakeLists.txt
@@ -3,8 +3,8 @@ file(GLOB FILES *.c *.h)
 add_library(rasterizer ${FILES})
 
 target_link_libraries(rasterizer PUBLIC 
+    device
     pglm
-    lcd
 )
 
 target_include_directories(rasterizer PUBLIC .)
