--- a/src/camera/CMakeLists.txt
+++ b/src/camera/CMakeLists.txt
@@ -3,8 +3,8 @@ file(GLOB FILES *.c *.h)
 add_library(camera ${FILES})
 
 target_link_libraries(camera PUBLIC 
+    device
     pglm
-    lcd
 )
 
 target_include_directories(camera PUBLIC .)
