transform is added to mesh struct

--- a/src/pgl/CMakeLists.txt
+++ b/src/pgl/CMakeLists.txt
@@ -4,7 +4,7 @@ add_library(pgl ${FILES})
 
 target_link_libraries(pgl PUBLIC 
     device
-    pglm
+    transform
 )
 
 target_include_directories(pgl PUBLIC .)
