--- a/src/pgl/CMakeLists.txt
+++ b/src/pgl/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(pgl ${FILES})
 target_link_libraries(pgl PUBLIC 
     device
     transform
+    texture
 )
 
 target_include_directories(pgl PUBLIC .)
