texture sampling and some changes in namings

--- a/src/texture/CMakeLists.txt
+++ b/src/texture/CMakeLists.txt
@@ -2,4 +2,8 @@
 file(GLOB FILES *.c *.h)
 add_library(texture ${FILES})
 
+target_link_libraries(texture PUBLIC 
+    pglm
+)
+
 target_include_directories(texture PUBLIC .)
