uniforms for vectors and some use of macros

--- a/src/pglm/CMakeLists.txt
+++ b/src/pglm/CMakeLists.txt
@@ -1,3 +1,8 @@
 
 add_library(pglm INTERFACE)
+
+# target_link_libraries(pglm INTERFACE 
+#     pico_float
+# )
+
 target_include_directories(pglm INTERFACE .)
